--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -1,5 +1,3 @@
-name: WindSurf Auto SEO Writer
-
 on:
   schedule:
     # 毎日 00:00 UTC = 09:00 JST
@@ -21,7 +19,7 @@ jobs:
 
       - name: Install WindSurf
         run: |
-          pip install --upgrade windsurf
+          pip install --upgrade git+https://github.com/2025-yuki/windsurf.git
 
       - name: Write Service Account JSON to disk
         run: |
