--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -1,8 +1,8 @@
+name: WindSurf Auto SEO Writer
 on:
   schedule:
-    # 毎日 00:00 UTC = 09:00 JST
     - cron: '0 0 * * *'
-  workflow_dispatch:  # 手動実行も可能
+  workflow_dispatch:
 
 jobs:
   run-windsurf:
