--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -18,6 +18,7 @@ jobs:
           python-version: '3.11'
 
       -  name: Install WindSurf
+	env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global \
