--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -17,14 +17,11 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install WindSurf
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config --global \
-            url."https://x-access-token:${GITHUB_TOKEN}@github.com/".insteadOf "https://github.com/"
-          pip install --upgrade git+https://github.com/openai/windsurf.git
+       - name: Install WindSurf
 
+        run: |
+          # OpenEarth の Windsurf モデルを GitHub から直接インストール
+          pip install --upgrade git+https://github.com/openearth/windsurf.git
       - name: Write Service Account JSON to disk
         run: |
           echo '${{ secrets.SA_JSON }}' > /tmp/sa.json
