--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -21,8 +21,11 @@ jobs:
 
       - name: Install WindSurf
         run: |
-          # OpenEarth の Windsurf モデルを GitHub から直接インストール
-          pip install --upgrade "git+https://github.com/openearth/windsurf.git#egg=windsurf"
+          # リポジトリをクローンしてローカルからインストール
+          git clone https://github.com/openearth/windsurf.git
+          cd windsurf
+          pip install .
+          cd ..
 
       - name: Write Service Account JSON to disk
         run: |
