ci: install WindSurf in editable mode

--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -24,7 +24,7 @@ jobs:
           # リポジトリをクローンしてローカルからインストール
           git clone https://github.com/openearth/windsurf.git
           cd windsurf
-          pip install .
+          pip install -e .
           cd ..
 
       - name: Write Service Account JSON to disk
