--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -12,11 +12,13 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Python & install WindSurf
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - run: |
+
+      - name: Install dependencies
+        run: |
           python -m pip install --upgrade pip
           pip install -e .
 
@@ -25,7 +27,7 @@ jobs:
           echo "${{ secrets.SA_JSON }}" > sa.json
           chmod 600 sa.json
 
-      - name: Run WindSurf pipeline
+      - name: Run WindSurf pipeline in Python
         env:
           GOOGLE_APPLICATION_CREDENTIALS: sa.json
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
@@ -34,4 +36,7 @@ jobs:
           WP_USER: ${{ secrets.WP_USER }}
           WP_APP_PASS: ${{ secrets.WP_APP_PASS }}
         run: |
-          windsurf run auto_seo.yaml
+          python - << 'EOF'
+import windsurf.console as wc
+wc.windsurf("auto_seo.yaml")
+EOF
