--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -2,9 +2,9 @@ name: WindSurf Auto SEO Writer
 
 on:
   schedule:
-    # 日本時間 09:00（UTC 00:00）に毎日実行
+    # 日本時間 09:00 (UTC 00:00) に毎日実行
     - cron: '0 0 * * *'
-  workflow_dispatch:      # 手動実行も可
+  workflow_dispatch:          # 手動実行も可
 
 jobs:
   run-windsurf:
@@ -12,50 +12,37 @@ jobs:
 
     steps:
     # 1) リポジトリをチェックアウト
-      name: Checkout repo
+    - name: Checkout repo
       uses: actions/checkout@v4
 
     # 2) Python 3.11 をセットアップ
-      name: Setup Python & dependencies
+    - name: Setup Python & dependencies
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
     # 3) 依存パッケージをインストール（ルートの setup.py を利用）
-      name: Install dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e .
+        pip install .
 
-    # 4) GCP サービスアカウント JSON を書き出し
-      name: Write Service Account JSON to disk
+    # 4) Service-Account JSON を書き出す
+    - name: Write Service Account JSON to disk
       run: |
-        echo '${{ secrets.SA_JSON }}' > sa.json
+        echo "${{ secrets.SA_JSON }}" > sa.json
         chmod 600 sa.json
 
-    # 5) WindSurf パイプラインを実行
-      name: Run pipeline via Python script
+    # 5) Python スクリプトで WindSurf を実行
+    - name: Run pipeline via Python script
       env:
         GOOGLE_APPLICATION_CREDENTIALS: sa.json
-        SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        WP_URL:  ${{ secrets.WP_URL }}
-        WP_USER: ${{ secrets.WP_USER }}
-        WP_APP_PASS: ${{ secrets.WP_APP_PASS }}
+        SPREADSHEET_ID:     ${{ secrets.SPREADSHEET_ID }}
+        SLACK_WEBHOOK_URL:  ${{ secrets.SLACK_WEBHOOK_URL }}
+        WP_URL:             ${{ secrets.WP_URL }}
+        WP_USER:            ${{ secrets.WP_USER }}
+        WP_APP_PASS:        ${{ secrets.WP_APP_PASS }}
       run: |
         # ルートを PYTHONPATH に追加して windsurf を解決
-        export PYTHONPATH="$GITHUB_WORKSPACE:$PYTHONPATH"
-        python run_pipeline.py
-
-      name: Run pipeline via Python script
-      env:
-        GOOGLE_APPLICATION_CREDENTIALS: sa.json
-        SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        WP_URL:  ${{ secrets.WP_URL }}
-        WP_USER: ${{ secrets.WP_USER }}
-        WP_APP_PASS: ${{ secrets.WP_APP_PASS }}
-      run: |
-        # ルートを PYTHONPATH に追加して vendor 版 windsurf を解決
         export PYTHONPATH="$GITHUB_WORKSPACE:$PYTHONPATH"
         python run_pipeline.py
