--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .
+        pip install -e ./windsurf           # ← editable install
 
     # 4) Service-Account JSON を書き出す
     - name: Write Service Account JSON to disk
