--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -1,48 +1,42 @@
 name: WindSurf Auto SEO Writer
 
 on:
-  schedule:
-    # 日本時間 09:00 (UTC 00:00) に毎日実行
+  schedule:           # 日本時間 09:00 に毎日実行
     - cron: '0 0 * * *'
-  workflow_dispatch:          # 手動実行も可
+  workflow_dispatch:  # 手動実行も可
 
 jobs:
   run-windsurf:
     runs-on: ubuntu-latest
-
     steps:
-    # 1) リポジトリをチェックアウト
     - name: Checkout repo
       uses: actions/checkout@v4
 
-    # 2) Python 3.11 をセットアップ
-    - name: Setup Python & dependencies
+    - name: Setup Python 3.11
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
-    # 3) 依存パッケージをインストール（ルートの setup.py を利用）
-    - name: Install dependencies
+    - name: Install latest WindSurf from GitHub
       run: |
         python -m pip install --upgrade pip
-        pip install -e .
+        pip install --upgrade git+https://github.com/openearth/windsurf.git
 
-    # 4) Service-Account JSON を書き出す
-    - name: Write Service Account JSON to disk
+    - name: Write Service-Account JSON
       run: |
-        echo "${{ secrets.SA_JSON }}" > sa.json
+        echo '${{ secrets.SA_JSON }}' > sa.json
         chmod 600 sa.json
 
-    # 5) Python スクリプトで WindSurf を実行
-    - name: Run pipeline via Python script
+    - name: Run WindSurf pipeline
       env:
         GOOGLE_APPLICATION_CREDENTIALS: sa.json
-        SPREADSHEET_ID:     ${{ secrets.SPREADSHEET_ID }}
-        SLACK_WEBHOOK_URL:  ${{ secrets.SLACK_WEBHOOK_URL }}
-        WP_URL:             ${{ secrets.WP_URL }}
-        WP_USER:            ${{ secrets.WP_USER }}
-        WP_APP_PASS:        ${{ secrets.WP_APP_PASS }}
+        SPREADSHEET_ID:   ${{ secrets.SPREADSHEET_ID }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        WP_URL:  ${{ secrets.WP_URL }}
+        WP_USER: ${{ secrets.WP_USER }}
+        WP_APP_PASS: ${{ secrets.WP_APP_PASS }}
       run: |
-        # ルートを PYTHONPATH に追加して windsurf を解決
-        export PYTHONPATH="$GITHUB_WORKSPACE:$PYTHONPATH"
-        python run_pipeline.py
+        python - <<'PY'
+        from windsurf.model import run_pipeline
+        run_pipeline("auto_seo.yaml")
+        PY
