--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,21 @@
-altgraph @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
 annotated-types==0.7.0
-anyio==3.7.1
+anyio==4.9.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 distro==1.9.0
 exceptiongroup==1.3.0
-future @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
-macholib @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
-notion-client==2.3.0
-openai==1.2.0
-pydantic==2.11.4
+jiter==0.10.0
+openai==1.84.0
+pydantic==2.11.5
 pydantic_core==2.33.2
-python-dotenv==1.0.0
-requests==2.31.0
-six @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
-slack-sdk==3.23.0
+python-dotenv==1.1.0
+requests==2.32.3
 sniffio==1.3.1
 tqdm==4.67.1
 typing-inspection==0.4.1
-typing_extensions==4.13.2
+typing_extensions==4.14.0
 urllib3==2.4.0
