--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+	  pip install -e vendor/windsurf
 
       - name: Run WindSurf pipeline
         env:
