--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,9 @@ tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 urllib3==2.4.0
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
+wordpress-xmlrpc
+requests
