--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -19,10 +19,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -e vendor/windsurf
-
       - name: Run WindSurf pipeline
         env:
+          PYTHONPATH: ${{ github.workspace }}/vendor:$PYTHONPATH
           OPENAI_API_KEY:            ${{ secrets.OPENAI_API_KEY }}
           GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
           SPREADSHEET_ID:            ${{ secrets.SPREADSHEET_ID }}
