--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -8,7 +8,10 @@ jobs:
   run-script:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - - uses: actions/checkout@v3
+    with:
+    submodules: recursive
+    lfs: true      
 
       - name: Set up Python
         uses: actions/setup-python@v4
