--- a/.github/workflows/windsurf_auto.yml
+++ b/.github/workflows/windsurf_auto.yml
@@ -1,9 +1,9 @@
 name: WindSurf Auto SEO
 
 on:
-  workflow_dispatch:           # 手動実行
+  workflow_dispatch:          # 手動実行
   schedule:
-    - cron: '0 0 * * *'        # 毎日 09:00 JST
+    - cron: '0 0 * * *'       # 毎日 09:00 JST
 
 jobs:
   run-windsurf:
@@ -13,33 +13,37 @@ jobs:
         shell: bash -e {0}
 
     steps:
-      # --- ① リポジトリを取得（サブモジュール含む） ---
-      - uses: actions/checkout@v3
-        with:
-          submodules: recursive
+    # === ① リポジトリを取得（サブモジュール含む） ===
+    - uses: actions/checkout@v3
+      with:
+        submodules: recursive
 
-      # --- ② Python 3.11 をセットアップ ---
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
+    # === ② Python 3.11 をセットアップ ===
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
 
-      # --- ③ 依存ライブラリをインストール ---
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
-          python -m pip install -e vendor/windsurf   # ← vendor 版 WindSurf を編集モードで
+    # === ③ 依存ライブラリをインストール ===
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip  install -r requirements.txt
+        python -m pip install -e vendor/windsurf   # ← vendor 版 WindSurf を編集モードで
 
-      # --- ④ WindSurf パイプラインを実行 ---
-      - name: Run WindSurf pipeline
-        env:
-          OPENAI_API_KEY:             ${{ secrets.OPENAI_API_KEY }}
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.SA_JSON_PATH }}
-          SPREADSHEET_ID:             ${{ secrets.SPREADSHEET_ID }}
-          WP_URL:                     ${{ secrets.WP_URL }}
-          WP_USER:                    ${{ secrets.WP_USER }}
-          WP_APP_PASS:                ${{ secrets.WP_APP_PASS }}
-          SLACK_WEBHOOK_URL:          ${{ secrets.SLACK_WEBHOOK_URL }}
-        run: |
-          echo "🐍 running WindSurf pipeline..."
-          python run_pipeline.py
+    # === ④ PYTHONPATH にプロジェクトルートを追加（★新規） ===
+    - name: Add project root to PYTHONPATH
+      run: echo "PYTHONPATH=$GITHUB_WORKSPACE:$PYTHONPATH" >> "$GITHUB_ENV"
+
+    # === ⑤ WindSurf パイプラインを実行 ===
+    - name: Run WindSurf pipeline
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.SA_JSON_PATH }}
+        SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+        WP_URL:  ${{ secrets.WP_URL }}
+        WP_USER: ${{ secrets.WP_USER }}
+        WP_APP_PASS: ${{ secrets.WP_APP_PASS }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      run: |
+        echo "🐍 running WindSurf pipeline..."
+        python -m vendor.windsurf run auto_seo.yaml
