fix: correct package names (requests, bmi-python)

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,4 +24,5 @@ google-auth
 google-auth-httplib2
 google-auth-oauthlib
 python-wordpress-xmlrpc==2.3
-requestsbmi-python==0.3.0
+bmi-python==0.3.0
+
